Fixed Bug #5492 "set @@session.read_rnd_buffer_size=33554432"    crashes server on query

incremented size of allocated buffer in the init_rr_cache(sql/records.cc)
(
We are going to read the last three bytes of the buffer via uint3korr
This macro reads actually 4 bytes (for speed)
So, we have to allocate one more byte at the end of the buffer 
to avoid memory assertion fault
)